# thestill

./: .coveragerc  .dockerignore  .env.example  .gitignore  .license-header.txt  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tessl.json  test_cleaning.py
.claude/skills/: code-review.md
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: podcast_categories.json
docs/: CODE_GUIDELINES.md  FIX_PLAN_LLM_CLEANER.md  MCP_IMPLEMENTATION_PLAN.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_USAGE.md  REFACTORING_FINDINGS.md  REFACTORING_PLAN.md  REPOSITORY_LAYER_PLAN.md  SQLITE_MIGRATION_PLAN.md  TESTING_MCP.md  TRANSCRIPT_CLEANING.md  TRANSCRIPT_CLEANING_REFACTOR_PLAN.md  URI_REFACTORING_SUMMARY.md  claude-desktop-mcp.md  code-guidelines.md  compare-cleanup.md  configuration.md  docker.md  evals.md  imports.md  logging-cloud-deployment.md  logging-cloudwatch-queries.md  logging-configuration.md  logging-elastic-queries.md  logging-gcp-queries.md  mcp-usage.md  narration.md  profiling-refresh.md  security.md  storage-backends.md  transcription-providers.md  ui-design-system.md  ui-screens-description.md  web-server.md
evaluation/: episodes.py  metrics.py  run.py
examples/narrations/: README.md  example-digest-medium.json  example-digest-medium.md
reports/: test_coverage_baseline.txt
scripts/: audit_segment_coverage.py  backfill_control_chars.py  backfill_description_fields.py  backfill_feed_holes.py  backfill_segmented_transcripts.py  build_top_podcasts.py  check_feed_discrepancies.py  cleaning_prototype.py  compare_cleanup.py  diag_gemini_clean_218.py  migrate_add_slugs.py  migrate_episode_facts_to_slugs.py  migrate_filenames_to_slugs.py  migrate_json_to_sqlite.py  migrate_summaries_to_subdirectories.py  migrate_to_subdirectories.py  prototype_entity_review.py  slice_compare_cleanup.py  survey_alternate_enclosures.py  verify_speakers.py
specs/: 00-constitution.md  01-architecture.md  02-api-reference.md  04-testing.md  05-docker-deployment.md  06-authentication.md  07-multi-user-web-app.md  08-multi-phase-transcript-cleaning.md  10-queue-viewer.md  11-task-queue-monitor.md  13-multi-user-shared-podcasts.md  14-dry-refactoring-plan.md  15-mistral-llm-provider.md  16-full-pipeline-and-failure-handling.md  18-refresh-performance.md  18-segment-preserving-transcript-cleaning.md  19-refresh-performance.md  20-floating-media-player.md  20-parallel-task-queues.md  21-episode-processing-indicator.md  22-floating-media-player.md  23-transcript-playback-sync.md  24-word-level-transcript-highlighting.md  25-security-audit-and-hardening.md  26-pre-deploy-security-checklist.md  27-add-podcast-search-discoverability.md  28-corpus-search-and-entities.md  29-per-user-inbox-fanout.md  30-mcp-anchors-and-entity-discovery.md  31-import-arbitrary-episodes.md  32-episodes-as-first-class.md  33-narrated-briefing.md  33-narrated-digest.md  34-briefing-audio-and-feeds.md  35-pluggable-file-storage.md  36-per-user-briefing-from-inbox.md  36-per-user-digest-from-inbox.md  37-substack-import-resolver.md  38-karaoke-word-highlighting.md  39-video-alternate-enclosure-player.md  (+37 more)
tests/: conftest.py  test_auth.py  test_external_transcript_downloader.py  test_html_utils.py  test_json_podcast_repository.py  test_mistral_provider.py  test_transcript_operations.py  test_transcript_operations_integration.py  test_transcript_parser.py
tests/integration/: test_briefing_delivery_repository_contract.py  test_digest_repository_contract.py  test_entity_repository_contract.py  test_inbox_repository_contract.py  test_legacy_claim_repository_contract.py  test_pending_operations_repository_contract.py  test_pg_related_builder.py  test_pgvector_search.py  test_pipeline_chunks_smoke.py  test_podcast_repository_episodes_contract.py  test_podcast_repository_podcasts_contract.py  test_postgres_queue_manager.py  test_refresh_incident_regression.py  test_spec28_migrations.py  test_sqlite_to_postgres_migration.py  test_user_repository_contract.py
tests/perf/: conftest.py  test_latency_budget.py
tests/unit/: test_spec28_phase3.py
thestill/: __init__.py  cli.py  logging.py
thestill/core/: __init__.py  audio_downloader.py  audio_preprocessor.py  briefing_scheduler.py  chunk_writer.py  circuit_breaker.py  corpus_writer.py  dalston_transcriber.py  elevenlabs_transcriber.py  embedding_model.py  entity_anchor.py  entity_coref.py  entity_enricher.py  entity_extractor.py  entity_page_writer.py  entity_resolver.py  entity_review.py  entity_type_rules.py  error_classifier.py  evaluator.py  external_transcript_downloader.py  facts_extractor.py  facts_manager.py  feed_manager.py  google_transcriber.py  llm_processor.py  llm_provider.py  media_source.py  parakeet_transcriber.py  post_processor.py  postgres_chunk_writer.py  postgres_queue_manager.py  progress.py  progress_store.py  queue_manager.py  refresh_failure.py  refresh_scheduler.py  reindex.py  segmented_transcript_cleaner.py  summary_artifacts.py  (+17 more)
thestill/evals/: __init__.py  compare.py  models.py  rubrics.py  runner.py  summary_checks.py
thestill/mcp/: __init__.py  entity_tools.py  resources.py  search_tools.py  server.py  tools.py  utils.py
thestill/migrations/: env.py  script.py.mako
thestill/models/: __init__.py  annotated_transcript.py  briefing.py  briefing_delivery.py  briefing_schedule.py  digest.py  enrichment.py  entities.py  facts.py  inbox.py  pending_operation.py  podcast.py  transcript.py  transcription.py  user.py
thestill/repositories/: __init__.py  briefing_delivery_repository.py  briefing_repository.py  briefing_schedule_repository.py  database.py  digest_repository.py  entity_repository.py  factory.py  inbox_repository.py  json_podcast_repository.py  legacy_claim_repository.py  pending_operations_repository.py  podcast_follower_repository.py  podcast_repository.py  postgres_briefing_delivery_repository.py  postgres_briefing_repository.py  postgres_briefing_schedule_repository.py  (+23 more)
(+529 files in other folders)
