[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thestill"
version = "1.0.0"
description = "Automated podcast transcription and summarization pipeline"
authors = [{name = "Sasa Sarunic", email = "ssarunic@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "openai>=1.3.0",
    "openai-whisper>=20231117",
    "whisperx>=3.1.1",
    "pyannote.audio>=3.1.1",
    "pydub>=0.25.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "yt-dlp>=2023.11.16",
    "ollama>=0.4.0",
    "google-generativeai>=0.8.3",
    "google-cloud-speech>=2.27.0",
    "google-cloud-storage>=2.10.0",
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
]

[project.scripts]
thestill = "thestill.cli:main"
thestill-mcp = "thestill.mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/thestill"
Repository = "https://github.com/yourusername/thestill"