[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thestill"
version = "1.0.0"
description = "Automated podcast transcription and summarization pipeline"
authors = [{name = "Sasa Sarunic", email = "ssarunic@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "openai>=1.3.0",
    "openai-whisper>=20231117",
    "whisperx>=3.1.1",
    "pyannote.audio>=3.1.1",
    "pydub>=0.25.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "yt-dlp>=2025.10.14",
    "ollama>=0.4.0",
    "google-generativeai>=0.8.3",
    "google-cloud-speech>=2.27.0",
    "google-cloud-storage>=2.10.0",
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
    "matplotlib>=3.7.0",
    "tenacity>=8.2.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
]

[project.scripts]
thestill = "thestill.cli:main"
thestill-mcp = "thestill.mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/thestill"
Repository = "https://github.com/yourusername/thestill"

# Tool configurations

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", ".venv/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "data/",
    ".venv/",
]

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0801",  # duplicate-code (will address in refactoring)
    "W0212",  # protected-access (needed for some internal testing)
]
ignore-paths = [
    "^tests/.*$",
    "^data/.*$",
    "^\\.venv/.*$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=thestill",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
]
