[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# Package the Vite-built SPA into the wheel even though thestill/web/static/
# is gitignored. Hatchling's VCS filter runs before force-include, so a plain
# force-include would not work — artifacts whitelists paths unconditionally.
packages = ["thestill"]
artifacts = ["thestill/web/static/**"]
exclude = [
    "thestill/web/frontend",  # source tree; only the built output in web/static/ ships
]

[project]
name = "thestill"
version = "1.0.0"
description = "Automated podcast transcription and summarization pipeline"
authors = [{name = "Sasa Sarunic", email = "ssarunic@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "defusedxml>=0.7.1",
    "openai>=1.3.0",
    "pydub>=0.25.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "yt-dlp>=2025.10.14",
    "ollama>=0.4.0",
    "google-genai>=1.0.0",
    "google-cloud-speech>=2.27.0",
    "google-cloud-storage>=2.10.0",
    "anthropic>=0.39.0",
    "mistralai>=1.0.0,<3.0.0",  # 2.x dropped the top-level `Mistral` export used in core/llm_provider.py
    "mcp>=1.0.0",
    "tenacity>=8.2.0",
    "python-slugify>=8.0.0",
    "requests-toolbelt>=1.0.0",
    # Logging
    "structlog>=24.1.0",
    "ecs-logging>=2.1.0",
    "structlog-gcp>=0.5.0",
    # Authentication
    "authlib>=1.3.0",
    "PyJWT>=2.8.0",
    # Dalston transcription client (self-hosted ElevenLabs-compatible server)
    "dalston-sdk @ git+https://github.com/ssarunic/dalston.git#subdirectory=sdk",
]

[project.optional-dependencies]
# Spec #44 — PostgreSQL backend. Optional: SQLite installs never import
# psycopg (the factory lazy-imports the PG repos only when DATABASE_URL is
# set). Install with ``pip install -e ".[postgres]"`` for a Postgres deploy.
postgres = [
    "psycopg[binary,pool]>=3.1",
    # pgvector adapter: numpy arrays <-> vector columns (search + chunk writer).
    "pgvector>=0.3",
    # register_vector round-trips vector columns as numpy arrays; also used by
    # the chunk writer / promotion streaming. Cheap, CPU-only.
    "numpy>=1.24",
    # Spec #44 Phase 5 — versioned schema migrations. The initial revision
    # executes postgres_schema.SCHEMA_SQL (single source of truth).
    "alembic>=1.13",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "ruff>=0.1.0",
    "jiwer>=3.0.0",
    # Spec #35 — S3 storage backend contract tests use moto's in-process
    # S3 mock. boto3 is pulled in here (not just in [s3]) so the contract
    # suite always runs in CI without needing the s3 extra installed.
    "boto3>=1.34",
    "moto[s3]>=5.0",
]
s3 = [
    # Spec #35 — production S3 backend. boto3 is the only required runtime
    # dep; in production deployments rely on the EC2 instance profile / ECS
    # task role for credentials (the boto3 credential chain), never explicit
    # keys baked into the image.
    "boto3>=1.34",
]
ses = [
    # Spec #51 — EMAIL_PROVIDER=ses. Same credential-chain rules as [s3];
    # a separate extra so a non-S3 deployment using SES doesn't have to
    # install a storage backend it isn't using.
    "boto3>=1.34",
]
web = [
    # Web server dependencies (FastAPI and uvicorn are in main deps)
    # Add future web-specific deps here (Jinja2, python-multipart, etc.)
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
local-transcription = [
    # Local Whisper / WhisperX / Parakeet stack. Not required for cloud
    # providers (Dalston, Google, ElevenLabs). Pulls torch transitively.
    "openai-whisper>=20250625",
    "whisperx>=3.7.0,<4.0.0",  # Pin to 3.7.x for VAD fixes
    "pyannote.audio>=3.1.1",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    # Parakeet TDT runs through NeMo's ASR API so the hypothesis carries
    # native segment- and word-level timestamps. The HF transformers
    # path drops them (spec #18 Parakeet word-timestamp fix).
    "nemo_toolkit[asr]>=2.0.0",
]
entities = [
    # Spec #28 — entity extraction via GLiNER zero-shot NER. Downloads
    # a ~400MB transformer on first use; pulls torch transitively.
    # Optional so cloud-only deployments don't pay the install cost.
    "gliner>=0.2.13",
    # Spec #28 §1.5 — entity disambiguation against Wikidata via
    # amazon-science/ReFinED. Lazy-loads several GB of LMDB-indexed
    # Wikidata to ``~/.cache/refined/`` on first use. CPU works; GPU
    # is 4-5x faster. Memory ~4-6GB at runtime.
    #
    # Installed from git because the package isn't published to PyPI;
    # the ``refined`` PyPI name is a placeholder for an unrelated 0.0.1
    # release. Pin to a tag once amazon-science cuts one.
    "refined @ git+https://github.com/amazon-science/ReFinED.git",
    # gliner caps ``transformers<5.2``; whisperx (in the
    # local-transcription extra) caps it below 5 too. Keep the upper
    # bound generous so future patch bumps stay in range.
    "transformers>=4.30,<5.15",
    # Spec #28 §1.6 — Levenshtein distance for the alias-merge job.
    # rapidfuzz is ~0.5MB, CPU-only, with much better accuracy on
    # short canonical names than stdlib difflib.
    "rapidfuzz>=3.0.0",
    # Spec #28 §2.10 — in-process search backend (replaces qmd).
    # ``sentence-transformers`` provides the embedding model. Default
    # ``paraphrase-multilingual-MiniLM-L12-v2`` (384-dim, ~470MB on
    # disk) supports 50+ languages including Croatian; English-only
    # corpora can swap to ``BAAI/bge-small-en-v1.5`` via the
    # ``EMBEDDING_MODEL`` env var for ~5-10% better English recall.
    # ``sqlite-vec`` is a SQLite extension that adds the ``vec0``
    # virtual table type for k-NN over float32 blobs.
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
    # Spec #28 §5.2 — "Related episodes" relevance. Dense vectors encode
    # conversational register more than topic, so the rail blends in a
    # TF-IDF topical signal (``search.related_builder``). scikit-learn
    # provides TfidfVectorizer; it's also pulled transitively by
    # sentence-transformers, but we depend on it explicitly here.
    "scikit-learn>=1.3.0",
]

[tool.uv]
# ``[entities]`` and ``[local-transcription]`` are deployed
# separately and never installed into the same environment.
# Telling uv they conflict lets the lockfile resolve each in its
# own fork — without this, uv must downgrade fsspec, jiwer,
# protobuf, packaging, and grpcio-status to the older versions
# the entities side accepts, which would regress the
# transcription-side runtime.
conflicts = [
    [
        { extra = "entities" },
        { extra = "local-transcription" },
    ],
]

[project.scripts]
thestill = "thestill.cli:main"
thestill-mcp = "thestill.mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/thestill"
Repository = "https://github.com/yourusername/thestill"

# Tool configurations

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", ".venv/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "data/",
    ".venv/",
]

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0801",  # duplicate-code (will address in refactoring)
    "W0212",  # protected-access (needed for some internal testing)
]
ignore-paths = [
    "^tests/.*$",
    "^data/.*$",
    "^\\.venv/.*$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=thestill",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--ignore=tests/e2e",
]

[tool.ruff]
# Minimal ruff configuration: forbid print() and tz-naive datetimes.
exclude = ["tests/", "data/", ".venv/"]

[tool.ruff.lint]
select = [
    "T201",    # print() found
    # spec #42 (FM-3): ban tz-naive datetime construction. A single
    # tz-naive-vs-aware comparison silently stopped feed discovery for
    # ~13 days. Use thestill.utils.datetime_utils.now_utc / ensure_utc
    # instead of datetime.utcnow() / datetime.now() / naive datetime(...).
    "DTZ001",  # datetime(...) without tzinfo
    "DTZ002",  # datetime.today() (naive local)
    "DTZ003",  # datetime.utcnow()
    "DTZ004",  # datetime.utcfromtimestamp()
    "DTZ005",  # datetime.now() without tz
    "DTZ006",  # datetime.fromtimestamp() without tz
]
